# FCG-Final-Project

./: .gitignore  CMakeLists.txt  README.md  github_link.txt
apps/: CMakeLists.txt
apps/nlm_denoiser/: CMakeLists.txt  nlm_denoiser.cpp
apps/yimagedenoise/: CMakeLists.txt  similyocto.cpp  yimagedenoise.cpp
apps/yscenetrace/: yscenetrace.cpp
bcd/: CMakeLists.txt
bcd/ext/: CMakeLists.txt
bcd/ext/openexr/OpenEXR/: CMakeLists.txt
bcd/ext/openexr/OpenEXR/IlmImf/: CMakeLists.txt
bcd/ext/openexr/OpenEXR/IlmImfTest/: testBackwardCompatibility.cpp
bcd/src/core/: CMakeLists.txt
libs/: CMakeLists.txt
libs/bcd/: CMakeLists.txt
libs/bcd/ext/nanogui/ext/glfw/src/: CMakeLists.txt
libs/bcd/ext/openexr/OpenEXR/: CMakeLists.txt
libs/bcd/ext/openexr/OpenEXR/IlmImfTest/: testBackwardCompatibility.cpp
libs/bcd/src/: CMakeLists.txt
libs/bcd/src/core/: CMakeLists.txt
libs/yocto_gui/glfw/src/: glfw3.pc
libs/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
scripts/: run.sh  run_nlm.sh
